GNOME Bugzilla – Bug 748576
tsdemux: fix tag list leak
Last modified: 2015-04-28 13:59:30 UTC
.
Created attachment 302502 [details] [review] tsdemux: fix taglist leak If the stream which is about to be removed still has a ref on a tag list we should drop it. Fix a leak which was occasionally happening with the validate.file.playback.change_state_intensive.tron_en_ge_aac_h264_ts scenario.
Thanks, pushed: commit 94446498de2c49aa636cd1dffbc03c0bf4793eae Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Tue Apr 28 10:13:35 2015 +0200 tsdemux: fix taglist leak If the stream which is about to be removed still has a ref on a tag list we should drop it. Fix a leak which was occasionally happening with the validate.file.playback.change_state_intensive.tron_en_ge_aac_h264_ts scenario. https://bugzilla.gnome.org/show_bug.cgi?id=748576